--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </head>
     <body>
         <div id="vrath-scene" style="width: 100%; height: 100%"></div>
-        <script type="text/javascript" src="build/js/bundle.js"></script>
+        <script type="text/javascript" src="build/bundle.js"></script>
     </body>
 </html>
