Loader, react-redux

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <title>VRath - VR shooting range</title>
     </head>
     <body>
-        <div id="vrath-scene" class="vrath-scene"></div>
+        <div id="vrath-wrapper" class="vrath-wrapper"></div>
         <script type="text/javascript" src="build/bundle.js"></script>
     </body>
 </html>
